--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -18,6 +18,7 @@
   </footer>
 
   <aside class="price">
-    <%= humanized_money_with_symbol product.price %>
+  <%# removed "humanized_money_with_symbol" from below for consistency %>
+    <%= number_to_currency(product.price) %>
   </aside>
 </article>
