added conditional message for when cart is empty with link to home page

--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -73,4 +73,9 @@ main section.products-show {
   }
 }
 
-
+// for cart page
+.empty-cart {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
