--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -73,9 +73,23 @@ main section.products-show {
   }
 }
 
+
+// My code goes here
 // for cart page
 .empty-cart {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+
+aside.sold-out {
+  position: absolute;
+  top: 0;
+  left: 0;
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 20px;
+  font-size: 1.3em;
+  opacity: 95%;
+  padding: 0.5em;
 }
