--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -17,7 +17,7 @@
     <% end %>
   </footer>
 
-  <% if product.quantity > 1 %>
+  <% if product.quantity < 1 %>
     <aside class="sold-out alert alert-danger" role="alert">
       <p>SOLD OUT!</p>
     </aside>
