--- a/app/views/admin/dashboard/show.html.erb
+++ b/app/views/admin/dashboard/show.html.erb
@@ -1,5 +1,4 @@
-<h1>Admin::Dashboard#show</h1>
-<p>Find me in app/views/admin/dashboard/show.html.erb</p>
+<h1>Admin Dashboard</h1>
  <div class="panel panel-default items">
 <table class="table table-bordered">
   <thead>
@@ -10,8 +9,8 @@
   </thead>
   <tbody>
     <tr>
-      <th colspan="2">Total Products</th>
-      <th colspan="2">Total Categories</th>
+      <th colspan="2"><%= @products.count %></th>
+      <th colspan="2"><%= @categories.count %></th>
     </tr>
   </tbody>
 </table>
