added link buttons in admin dashboard

--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -1,1 +1,17 @@
+<head>
 <h1>HELLO About </h1>
+</head>
+<body>
+  <div>
+    <p>picture</p>
+    <p>Kirby</p>
+  </div>
+  <div>
+    <p>picture</p>
+    <p>Ness</p>
+  </div>
+  <div>
+    <p>picture</p>
+    <p>Bowser</p>
+  </div>
+</body>
