--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -1,3 +1,24 @@
+
+<header class="page-header">
 <h1>Admin::Categories#index</h1>
 <p>Find me in app/views/admin/categories/index.html.erb</p>
-<%= @categories.inspect %>
+</header>
+
+<body>
+    <table class="table table-bordered">
+      <thead>
+        <tr>
+          <th colspan="2">Image</th>
+          <th>Category</th>
+          <th>Product Quantity</th>
+        </tr>
+      </thead>
+      <tbody>
+        <%= render @categories %>
+      </tbody>
+    </table>
+
+  </div>
+
+</body>
+
