--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -1,14 +1,14 @@
 
 <header class="page-header">
-<h1>Admin::Categories#index</h1>
-<p>Find me in app/views/admin/categories/index.html.erb</p>
+  <h1>Admin::Categories#index</h1>
+  <p>Find me in app/views/admin/categories/index.html.erb</p>
 </header>
 
 <body>
     <table class="table table-bordered">
       <thead>
         <tr>
-          <th colspan="2">Image</th>
+          <th>Image</th>
           <th>Category</th>
           <th>Product Quantity</th>
         </tr>
@@ -17,8 +17,6 @@
         <%= render @categories %>
       </tbody>
     </table>
-
-  </div>
 
 </body>
 
