created the form to create new category

--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -5,18 +5,21 @@
 </header>
 
 <body>
-    <table class="table table-bordered">
-      <thead>
-        <tr>
-          <th>Image</th>
-          <th>Category</th>
-          <th>Product Quantity</th>
-        </tr>
-      </thead>
-      <tbody>
-        <%= render @categories %>
-      </tbody>
-    </table>
+  <div class="well">
+    <%= link_to '+ New Category', [:new, :admin, :category], class: 'btn btn-info' %>
+  </div>
 
+  <table class="table table-bordered">
+    <thead>
+      <tr>
+        <th>Image</th>
+        <th>Category</th>
+        <th>Product Quantity</th>
+      </tr>
+    </thead>
+    <tbody>
+      <%= render @categories %>
+    </tbody>
+  </table>
 </body>
 
