--- a/app/views/admin/categories/new.html.erb
+++ b/app/views/admin/categories/new.html.erb
@@ -3,8 +3,6 @@
 
   <header class="page-header">
     <h1>Admin &raquo; New Category</h1>
-    <h1>Admin::Categories#new</h1>
-    <p>Find me in app/views/admin/categories/new.html.erb</p>
   </header>
 
   <div class="well">
@@ -31,34 +29,7 @@
           <%= form.text_field :name, class: 'form-control' %>
         </div>
 
-        <div class="form-group">
-          <%= form.label :description %>
-          <%= form.text_area :description, class: 'form-control' %>
-        </div>
-
-        <div class="form-group">
-          <%= form.label :category %>
-          <%= form.select :category_id, options_from_collection_for_select(Category.all.order(:name), :id, :name), { include_blank: true }, class: 'form-control' %>
-        </div>
-
-        <div class="form-group">
-          <%= form.label :quantity %>
-          <%= form.number_field :quantity, class: 'form-control' %>
-        </div>
-
-        <div class="form-group">
-          <%= form.label :price %>
-          <%= form.text_field :price, class: 'form-control' %>
-        </div>
-
-
-
-        <div class="form-group">
-          <%= form.label :image %>
-          <%= form.file_field :image %>
-        </div>
-
-        <%= form.submit 'Create Product', class: 'btn btn-primary' %>
+        <%= form.submit 'Create Category', class: 'btn btn-primary' %>
       <% end %>
     </div>
   </div>
