--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -26,7 +26,7 @@
           </ul>
         </li>
         <li>
-          <%= link_to 'About', :about_index %>
+          <%= link_to 'About', :about %>
         </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
