--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,7 @@
 </head>
 <body>
 
+<div>
   <%= render 'layouts/top_nav' %>
 
   <main class="container">
@@ -15,5 +16,7 @@
   </main>
 
   <%= yield :end_of_body %>
+</div>
+
 </body>
 </html>
