updated signup to take in first name and last name instead of name, to match new schema. Also updated name display on nav bar

--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -35,7 +35,7 @@
             Signed in as
           </li>
           <li>
-            <%= link_to "#{current_user.name}", '/'%>
+            <%= link_to "#{current_user.first_name} #{current_user.last_name}", '/'%>
           </li>
           <li>
             <%= link_to "Logout", "/logout"%>
