--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -9,15 +9,20 @@
     <%= product.description %>
   </p>
   <footer class="actions">
-    <%= button_to add_item_cart_path(product_id: product.id), class: 'btn btn-primary' , method: :post do %>
-      <%= fa_icon "shopping-cart", text: 'Add' %>
+      
+    <% if not product.sold_out?%>
+      <%= button_to add_item_cart_path(product_id: product.id), 
+      class: 'btn btn-primary' , 
+      method: :post do %>
+        <%= fa_icon "shopping-cart", text: 'Add' %>
+      <% end %>
     <% end %>
     <%= link_to product, class: 'btn btn-default pull-right' do %>
       Details &raquo;
     <% end %>
   </footer>
 
-  <% if product.quantity < 1 %>
+  <% if product.sold_out? %>
     <aside class="sold-out alert alert-danger" role="alert">
       <p>SOLD OUT!</p>
     </aside>
