--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -1,7 +1,6 @@
 
 <header class="page-header">
-  <h1>Admin::Categories#index</h1>
-  <p>Find me in app/views/admin/categories/index.html.erb</p>
+  <h1>Admin &raquo; All Categories</h1>
 </header>
 
 <body>
