--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,15 +1,41 @@
-<h1>User#new</h1>
-<p>Find me in app/views/user/new.html.erb</p>
-
 <h1>Signup!</h1>
 
-<%= form_for :user, url: '/users' do |f| %>
-
-  First Name: <%= f.text_field :first_name %>
-  last Name: <%= f.text_field :last_name %>
-  Email: <%= f.text_field :email %>
-  Password: <%= f.password_field :password %>
-  Password Confirmation: <%= f.password_field :password_confirmation %>
-  <%= f.submit "Submit" %>
+<body>
+<div class="panel panel-default items">
+<table class="table table-bordered">
+<%= form_for :user, url: '/users'  do |f| %>
+    <tr>
+      <td>
+        First Name: <%= f.text_field :first_name %>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        last Name: <%= f.text_field :last_name %>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        Email: <%= f.text_field :email %>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        Password: <%= f.password_field :password %>
+      </td>
+    </tr>  
+    <tr>
+      <td>
+        Password Confirmation: <%= f.password_field :password_confirmation %>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <%= f.submit "Submit" %>
+      </td>
+    </tr>
 
 <% end %>
+  </table>
+</div>
+</body>
